--- a/src/styles/scss/components/_list.scss
+++ b/src/styles/scss/components/_list.scss
@@ -1,10 +1,10 @@
-@mixin user-list {
+@mixin list {
     html {
         body {
             #root {
                 .main-container {
                     main {
-                        #user-container {
+                        #container {
                             .tabs {
                                 // position: relative;
                                 // background: white;
