--- a/src/styles/scss/components/_list.scss
+++ b/src/styles/scss/components/_list.scss
@@ -64,6 +64,10 @@
                                         padding: 5px;
                                         text-align: center;
 
+                                        a {
+                                            text-decoration: none;
+                                        }
+
                                         label {
                                             transition: all 0.3s ease-in-out;
                                             color: desaturate(#428BFF, 85%);
