adds default scss properties

--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -1,3 +1,4 @@
+@import "base/defaults";
 @import "components/login";
 @import "components/navbar";
 @import "components/list";
@@ -5,6 +6,7 @@
 @import "components/register-form";
 @import "components/not-found";
 
+@include defaults;
 @include login;
 @include navbar;
 @include list;
