--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -449,4 +449,12 @@ html body #root .main-container main .FourOhFour .code {
   justify-content: center;
 }
 
+html body #root .main-container main .content {
+  position: relative;
+  background: white;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border-radius: 5px;
+  min-width: 180px;
+}
+
 /*# sourceMappingURL=styles.css.map */
