--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -463,4 +463,8 @@ html body #root .main-container .main-sidebar .navbar-brand a.navbar-item {
   padding-left: 8px;
 }
 
+html body .modal {
+  z-index: 5001;
+}
+
 /*# sourceMappingURL=styles.css.map */
