modifies the styling for the login form

--- a/src/styles/scss/components/_login.scss
+++ b/src/styles/scss/components/_login.scss
@@ -132,7 +132,7 @@
                             padding: 1em;
                             width: 100%;
                             background-color: #fff;
-                            display: flex;
+                            // display: flex;
                             justify-content: center;
                         }
                           
@@ -145,7 +145,7 @@
                             background-color: $brand-color;
                             color: white;
                             display: block;
-                            margin: 0 auto;
+                            // margin: 0 auto;
                             position: relative;
                         }
                     }
