--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -382,6 +382,36 @@ html body div.modal div.modal-dialog .modal-content .modal-body .user-form form.
   font-size: 14px;
   margin-bottom: 20px;
 }
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields label,
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields input {
+  display: block;
+  width: 100%;
+}
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields label {
+  margin-bottom: 5px;
+  height: 22px;
+}
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields input {
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid #777;
+}
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields input.error {
+  border-color: red;
+}
+html body #root .main-container main .password-reset-container .content .password-reset-form .passwordResetForm .password-reset-form-fields .input-feedback {
+  color: #eb3636;
+  margin-top: -15px;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
 
 html body .register-form form.registerForm .register-form-fields {
   max-width: 500px;
