--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -66,11 +66,11 @@
             #root {
                 .main-container {
                     main {
-                        .password-reset-container {
+                        .password-reset-container, .new-password-container {
                             .content {
-                                .password-reset-form {
-                                    .passwordResetForm {
-                                        .password-reset-form-fields {
+                                .password-reset-form, .new-password-form {
+                                    .passwordResetForm, .newPasswordForm {
+                                        .password-reset-form-fields, .new-password-form-fields {
                                             max-width: 500px;
                                             width: 100%;
                                             margin: 0 auto;
