adds width styles

--- a/src/styles/scss/base/_defaults.scss
+++ b/src/styles/scss/base/_defaults.scss
@@ -15,6 +15,9 @@
     .w-40 {
         width: 40% !important;
     }
+    .w-45 {
+        width: 45% !important;
+    }
 
     .w-55 {
         width: 55% !important;
