adds simple profile styling

--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "components/content";
 @import "components/sidebar";
 @import "components/modal";
+@import "components/profile";
 
 @include defaults;
 @include login;
@@ -19,3 +20,4 @@
 @include content;
 @include sidebar;
 @include modal;
+@include profile;
