--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -514,4 +514,100 @@ html body .modal {
   z-index: 5001;
 }
 
+html body #root .main-container main .profile-container .content section body {
+  background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+}
+html body #root .main-container main .profile-container .content section .emp-profile {
+  padding: 3%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  border-radius: 0.5rem;
+  background: #fff;
+}
+html body #root .main-container main .profile-container .content section .profile-img {
+  text-align: center;
+}
+html body #root .main-container main .profile-container .content section .profile-img img {
+  width: 70%;
+  height: 100%;
+}
+html body #root .main-container main .profile-container .content section .profile-img .file {
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  width: 70%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  background: #212529b8;
+}
+html body #root .main-container main .profile-container .content section .profile-img .file input {
+  position: absolute;
+  opacity: 0;
+  right: 0;
+  top: 0;
+}
+html body #root .main-container main .profile-container .content section .profile-head h5 {
+  color: #333;
+}
+html body #root .main-container main .profile-container .content section .profile-head h6 {
+  color: #0062cc;
+}
+html body #root .main-container main .profile-container .content section .profile-edit-btn {
+  border: none;
+  border-radius: 1.5rem;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
+html body #root .main-container main .profile-container .content section .proile-rating {
+  font-size: 12px;
+  color: #818182;
+  margin-top: 5%;
+}
+html body #root .main-container main .profile-container .content section .proile-rating span {
+  color: #495057;
+  font-size: 15px;
+  font-weight: 600;
+}
+html body #root .main-container main .profile-container .content section .profile-head .nav-tabs {
+  margin-bottom: 5%;
+}
+html body #root .main-container main .profile-container .content section .profile-head .nav-tabs .nav-link {
+  font-weight: 600;
+  border: none;
+}
+html body #root .main-container main .profile-container .content section .profile-head .nav-tabs .nav-link.active {
+  border: none;
+  border-bottom: 2px solid #0062cc;
+}
+html body #root .main-container main .profile-container .content section .profile-work {
+  padding: 14%;
+  margin-top: -15%;
+}
+html body #root .main-container main .profile-container .content section .profile-work p {
+  font-size: 12px;
+  color: #818182;
+  font-weight: 600;
+  margin-top: 10%;
+}
+html body #root .main-container main .profile-container .content section .profile-work a {
+  text-decoration: none;
+  color: #495057;
+  font-weight: 600;
+  font-size: 14px;
+}
+html body #root .main-container main .profile-container .content section .profile-work ul {
+  list-style: none;
+}
+html body #root .main-container main .profile-container .content section .profile-tab label {
+  font-weight: 600;
+}
+html body #root .main-container main .profile-container .content section .profile-tab p {
+  font-weight: 600;
+  color: #0062cc;
+}
+
 /*# sourceMappingURL=styles.css.map */
