--- a/src/styles/scss/components/_form.scss
+++ b/src/styles/scss/components/_form.scss
@@ -66,7 +66,7 @@
             #root {
                 .main-container {
                     main {
-                        .password-reset-container, .new-password-container {
+                        .password-reset-container, .new-password-container, .profile-container {
                             .content {
                                 .password-reset-form, .new-password-form {
                                     .passwordResetForm, .newPasswordForm {
@@ -103,6 +103,50 @@
                                                 margin-top: -15px;
                                                 font-size: 14px;
                                                 margin-bottom: 20px;
+                                            }
+                                        }
+                                    }
+                                }
+
+                                .tab-content {
+                                    #profile-tabs-tabpane-password {
+                                        .new-password-form {
+                                            .newPasswordForm {
+                                                .new-password-form-fields {
+                                                    max-width: 500px;
+                                                    width: 100%;
+                                                    margin: 0 auto;
+                                                    padding: 20px;
+                                                
+                                                    label,
+                                                    input {
+                                                        display: block;
+                                                        width: 100%;
+                                                    }
+                                                    
+                                                    label {
+                                                        margin-bottom: 5px;
+                                                        height: 22px;
+                                                    }
+                                                    
+                                                    input {
+                                                        margin-bottom: 20px;
+                                                        padding: 10px;
+                                                        border-radius: 3px;
+                                                        border: 1px solid #777;
+                                                    }
+                                                    
+                                                    input.error {
+                                                        border-color: red;
+                                                    }
+                                                    
+                                                    .input-feedback {
+                                                        color: rgb(235, 54, 54);
+                                                        margin-top: -15px;
+                                                        font-size: 14px;
+                                                        margin-bottom: 20px;
+                                                    }
+                                                }
                                             }
                                         }
                                     }
