adds default styling to buttons

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -111,6 +111,11 @@
   padding-right: 4.5rem !important;
 }
 
+.rounded-btn {
+  border: 2px solid rgba(255, 255, 255, 0) !important;
+  border-radius: 40px !important;
+}
+
 html body #root .login-form h1 {
   text-align: center;
 }
