--- a/src/styles/scss/base/_defaults.scss
+++ b/src/styles/scss/base/_defaults.scss
@@ -112,4 +112,9 @@
     .pr-6 {
         padding-right: 4.5rem !important;
     }
+
+    .rounded-btn {
+        border: 2px solid rgba(255, 255, 255, 0) !important;
+        border-radius: 40px !important;
+    }
 }
